changed joueur added tests